# design_patterns

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  READEME.md  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml
gym01/diagrams/: showdown.asta
gym01/include/: ai_player.hpp  card.hpp  game.hpp  human_player.hpp  player.hpp
gym01/src/: ai_player.cc  card.cc  deck.cc  game.cc  human_player.cc  player.cc
gym02/: Makefile
gym02/diagrams/: matchmaking.asta
gym02/include/: distance_strategy.hpp  habit_strategy.hpp  individual.hpp  strategy.hpp  system.hpp
gym02/src/: distance_strategy.cc  habit_strategy.cc  individual.cc  main.cc  strategy.cc  system.cc
gym03/diagrams/: cardgame.asta
gym03/include/: ai_player.hpp  card.hpp  card_game.hpp  deck.hpp  human_player.hpp  player.hpp  poker_card.hpp  showdown_card_game.hpp  uno_card.hpp  uno_card_game.hpp
gym03/src/: ai_player.cc  card.cc  card_game.cc  deck.cc  human_player.cc  main.cc  player.cc  poker_card.cc  showdown_card_game.cc  uno_card.cc  uno_card_game.cc
gym03/test/: card_test.cc  deck_test.cc  player_test.cc
gym04/diagrams/: collision.asta
gym04/include/: cancel_collision.hpp  collision.hpp  damage_collision.hpp  heal_collision.hpp  invalid_collision.hpp  sprite.hpp  world.hpp
gym04/src/: cancel_collision.cc  collision.cc  damage_collision.cc  heal_collision.cc  invalid_collision.cc  main.cc  sprite.cc  world.cc
gym05/diagrams/: big2.asta
gym05/include/: ai_player.hpp  big2.hpp  card.hpp  card_pattern.hpp  deck.hpp  full_house_card_pattern.hpp  human_player.hpp  pair_card_pattern.hpp  player.hpp  single_card_pattern.hpp  straight_card_pattern.hpp
gym05/src/: ai_player.cc  big2.cc  card.cc  card_pattern.cc  deck.cc  full_house_card_pattern.cc  human_player.cc  main.cc  pair_card_pattern.cc  player.cc  single_card_pattern.cc  straight_card_pattern.cc
gym06/diagrams/: youtube.asta
gym06/include/: channel.hpp  channel_subscriber.hpp  fireball_subscriber.hpp  video.hpp  waterball_subscriber.hpp
gym06/src/: channel.cc  channel_subscriber.cc  fireball_subscriber.cc  main.cc  video.cc  waterball_subscriber.cc
gym07/diagrams/: keyboard.asta
gym07/include/: command.hpp  connect_telecom.hpp  disconnect_telecom.hpp  keyboard.hpp  move_tank_backward.hpp  move_tank_forward.hpp  tank.hpp  telecom.hpp
gym07/src/: connect_telecom.cc  disconnect_telecom.cc  keyboard.cc  main.cc  move_tank_backward.cc  move_tank_forward.cc  tank.cc  telecom.cc
gym08/diagrams/: adventure.asta
gym08/include/: character.hpp  direction.hpp  game.hpp  map_object.hpp  monster.hpp  obstacle.hpp  role.hpp  state.hpp  treasure.hpp
gym08/src/: character.cc  game.cc  main.cc  monster.cc  role.cc  state.cc
gym09/: Makefile  test.sh
gym09/diagrams/: rpg.asta
gym09/include/: ai.hpp  hero.hpp  role.hpp  rpg.hpp  skill.hpp  slime.hpp  state.hpp  troop.hpp
gym09/src/: ai.cc  hero.cc  main.cc  role.cc  rpg.cc  skill.cc  slime.cc  state.cc  troop.cc
gym10/: CMakeLists.txt
gym10/data/: database.json
gym10/diagrams/: prescribe.asta
gym10/include/: case.hpp  patient.hpp  patient_database.hpp  prescribe_system.hpp  prescriber.hpp  symptom.hpp
gym10/include/prescription/: attractive_prescription_handler.hpp  covid19_prescription_handler.hpp  prescription.hpp  prescription_handler.hpp  sleep_apnea_syndrome_prescription_handler.hpp
gym10/src/: case.cc  main.cc  patient.cc  patient_database.cc  prescribe_system.cc  prescriber.cc
gym10/src/prescription/: attractive_prescription_handler.cc  covid19_prescription_handler.cc  prescription.cc  prescription_handler.cc  sleep_apnea_syndrome_prescription_handler.cc
gym10/test/: support.txt
gym11/data/: script.txt
gym11/diagrams/: relationship.asta
gym11/include/: relationship_analyzer.hpp  relationship_graph.hpp  relationship_graph_impl.hpp  super_relationship_analyzer.hpp  super_relationship_analyzer_adapter.hpp  union_find.hpp
gym11/src/: main.cc  relationship_graph_impl.cc  super_relationship_analyzer.cc  super_relationship_analyzer_adapter.cc  union_find.cc
gym12/data/: database.txt
gym12/diagrams/: database.asta
gym12/include/: database.hpp  employee.hpp  env_guarded_database_proxy.hpp  real_database.hpp  real_employee.hpp  virtual_employee_proxy.hpp
gym12/src/: env_guarded_database_proxy.cc  main.cc  real_database.cc  real_employee.cc  virtual_employee_proxy.cc
gym13/data/: config.json
gym13/diagrams/: logger.asta
gym13/include/: log_level.hpp  logger.hpp
gym13/include/exporter/: builder.hpp  composite_exporter.hpp  console_exporter.hpp  exporter.hpp  file_exporter.hpp
gym13/include/layout/: builder.hpp  layout.hpp  standard_layout.hpp
gym13/src/: logger.cc  main.cc
gym14/: CMakeLists.txt
gym14/config/: blacklist.txt  services.txt
gym14/diagrams/: httpclient.asta
gym14/include/: http_client.hpp
gym14/src/: main.cc
gym15/: test_runner.py
gym15/diagrams/: fsm.asta
gym15/include/: waterball_community_facade.hpp
gym15/src/: main.cc  waterball_community_facade.cc
gym16/diagrams/: compute.asta
gym16/include/: file_models.hpp  model.hpp  models.hpp  multiplication_model.hpp
gym16/src/: file_models.cc  main.cc  model.cc  multiplication_model.cc
gym17-2/src/: main.cc
gym17-3/src/: main.cc
gym17/diagrams/: geneticalgorithm.asta
gym17/src/: main.cc
gym18/diagrams/: ascii.asta
gym18/src/: main.cc
(+142 files in other folders)
